check_errors_2.txt
    Checking rustview v0.1.0 (C:\_new_ai_project\uriviewer)
error[E0432]: unresolved import `muda::builders::MenuBuilder`
 --> src\tray.rs:4:48
  |
4 | use muda::{Menu, MenuItem, PredefinedMenuItem, builders::MenuBuilder};
  |                                                ^^^^^^^^^^^^^^^^^^^^^ no `MenuBuilder` in `builders`

error[E0603]: module `builders` is private
   --> src\tray.rs:4:48
    |
  4 | use muda::{Menu, MenuItem, PredefinedMenuItem, builders::MenuBuilder};
    |                                                ^^^^^^^^ private module
    |
note: the module `builders` is defined here
   --> C:\Users\uripapa7\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\muda-0.15.3\src\lib.rs:137:1
    |
137 | mod builders;
    | ^^^^^^^^^^^^

warning: unused imports: `CMF_DEFAULTONLY` and `CMF_VERBSONLY`
  --> src\shell_ext.rs:19:5
   |
19 |     CMF_DEFAULTONLY, CMF_VERBSONLY, CMINVOKECOMMANDINFO, HDROP,
   |     ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Path`
 --> src\tray.rs:5:17
  |
5 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `std::str::FromStr`
 --> src\hotkeys.rs:4:5
  |
4 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^

error[E0599]: no method named `keys_down` found for reference `&InputState` in the current scope
   --> src\app.rs:204:29
    |
204 |                 let key = i.keys_down().next();
    |                             ^^^^^^^^^-- help: remove the arguments
    |                             |
    |                             field, not a method
    |
help: there is a method `key_down` with a similar name, but with different arguments
   --> C:\Users\uripapa7\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.30.0\src\input_state\mod.rs:606:5
    |
606 |     pub fn key_down(&self, desired_key: Key) -> bool {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0382]: use of moved value: `config`
   --> src\app.rs:110:28
    |
 74 |         let config = load_config();
    |             ------ move occurs because `config` has type `types::AppConfig`, which does not implement the `Copy` trait
...
 81 |             config,
    |             ------ value moved here
...
110 |         if let Some((mods, key)) = config.color_picker_hotkey {
    |                            ^^^ value used here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
 81 |             config: config.clone(),
    |                   ++++++++++++++++

error[E0382]: borrow of moved value: `hex`
   --> src\app.rs:449:79
    |
443 | ...   let hex = format!("#{:02X}{:02X}{:02X}", color[0], color[1], color[2]);
    |           --- move occurs because `hex` has type `std::string::String`, which does not implement the `Copy` trait
444 | ...   painter.text(pos + Vec2::new(0.0, 70.0), egui::Align2::CENTER_CENTER, hex, egui::FontId::proportional(14.0), Color32::WHITE);
    |                                                                             --- value moved here
...
449 | ...           self.status = Some(format!("?됱긽??蹂듭궗?섏뿀?듬땲?? {}", hex));
    |                                                                       ^^^ value borrowed here after move
    |
    = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider borrowing `hex`
    |
444 |                         painter.text(pos + Vec2::new(0.0, 70.0), egui::Align2::CENTER_CENTER, &hex, egui::FontId::proportional(14.0), Color32::WHITE);
    |                                                                                               +

error[E0382]: use of moved value: `sel.end`
   --> src\app.rs:491:58
    |
458 |             if let Some(mut sel) = self.view_state.selection.clone() {
    |                         ------- move occurs because `sel` has type `types::SelectionState`, which does not implement the `Copy` trait
...
462 |                         self.view_state.selection = Some(sel);
    |                                                          --- value moved here
...
491 |                 let rect = Rect::from_two_pos(sel.start, sel.end);
    |                                                          ^^^^^^^ value used here after move

warning: unused variable: `x`
   --> src\app.rs:475:33
    |
475 | ...                   let x = (rx * screen.width as f32) as u32;
    |                           ^ help: if this is intentional, prefix it with an underscore: `_x`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `y`
   --> src\app.rs:476:33
    |
476 | ...                   let y = (ry * screen.height as f32) as u32;
    |                           ^ help: if this is intentional, prefix it with an underscore: `_y`

warning: unused variable: `cropped`
   --> src\app.rs:481:37
    |
481 | ...                   let cropped = screen.image.clone(); // Actually should crop
    |                           ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_cropped`

warning: value assigned to `menu_index` is never read
   --> src\shell_ext.rs:220:21
    |
220 |                     menu_index += 1;
    |                     ^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0382, E0432, E0599, E0603.
For more information about an error, try `rustc --explain E0382`.
warning: `rustview` (lib) generated 7 warnings
error: could not compile `rustview` (lib) due to 6 previous errors; 7 warnings emitted
